# iced-color-picker

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  widget.rs
src/widget/: hsv.rs  spectrums.rs  style.rs
