[package]
name = "iced_color_picker"
version = "0.14.0"
edition = "2024"
authors = ["B0ney"]
description = "A simple and composable color picker widget for iced"
license = "MIT"
repository = "https://github.com/B0ney/iced-color-picker"

[workspace]
members = ["example"]

[workspace.dependencies]
iced_color_picker = { path = "." }
iced = { version = "0.14", default-features = false, features=["x11", "wayland"] }


[dependencies]
iced_core = { version = "0.14" }
iced_graphics = { version = "0.14", features = ["geometry"] }


# TODO
[profile.dev.package."*"]
opt-level = 1
